--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.2",
     "html-loader": "^1.3.0",
-    "html-webpack-plugin": "^4.4.1"
+    "html-webpack-plugin": "^4.4.1",
+    "style-loader": "^1.2.1"
   }
 }
