--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^4.2.2",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
+    "react-router-dom": "^5.2.0",
     "style-loader": "^1.2.1"
   }
 }
