--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1",
     "style-loader": "^1.2.1"
   }
 }
