--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@loadable/component": "^5.14.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
     "html-loader": "^1.3.0",
